2000-06-09  Kalle Marjola  <Kalle Marjola <rpr@wapit.com>>

	* gw/bb_*.c: removed START and EXIT debug info as they are in new
	thread wrapper, too

	* gw/bb_boxc.c: fixed bugs in wdp-router and wapbox quit, and
	re-synchronized shutdown

	* gw/bearerbox.c, gw/bb_http.c: removed core_threads as new thread
	wrapper can be used to handle that.
	
Fri Jun  9 08:31:18 2000  Lars Wirzenius  <liw@wapit.com>

	* Separated the method state machine from the session state machine,
	to keep state tables in the source closer to the spec and to allow
	multiple fetches per client.
	
	* gw/wsp-method-machine.h, gw/wsp-session-machine.h: Split out from
	gw/wsp_machine-decl.h, now removed.
	
	* gw/wsp-method-state.h, gw/wsp-session-state.h: Split out from
	gw/wsp_state-decl.h, now removed.

	* gw/wsp-session.c: Added handling of WSPMethodMachines and
	correct routing of WAPEvents between the session and method
	state machines. This is a bit ugly, though.

	* gw/wap-appl.c, gw/wap-events-def.h, gw/wsp.h, gw/wtp.c:
	Related changes.

Fri Jun  9 06:20:12 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp.c: Combined wtp_machine_create and wtp_machine_create_empty.

Fri Jun  9 05:39:06 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp-session.c, gw/wsp_machine-decl.h, gw/wsp_state-decl.h:
	Removed `unused' field from WSPMachine, using state == NULL_STATE
	instead.

Fri Jun  9 05:32:38 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-events-def.h, gw/wtp.c, gw/wsp_state-decl.h: Removed
	unused exit_info and exit_info_present fields from WAPEvents.

Fri Jun  9 05:28:12 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp_state-decl.h: Enabled sending of TR-Abort.ind events
	to WSP.

	* gw/wtp.c: Removed (now unused) variable current_primitive.

Fri Jun  9 05:18:07 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-events-def.h: Finished breaking up pack_wsp_event into
	smaller functions.

Fri Jun  9 05:10:20 2000  Lars Wirzenius  <liw@wapit.com>
